--- a/angular-web-app/src/app/components/_admin/calendar-edit/calendar-edit.component.html
+++ b/angular-web-app/src/app/components/_admin/calendar-edit/calendar-edit.component.html
@@ -4,12 +4,11 @@
 <div class="container-fluid" *ngIf="generalContent">
   <div class="row mb-5">
     <div class="col-12">
-
       <form *ngIf="calendarItem" (ngSubmit)="onSubmit()" #addCalendarItemForm="ngForm">
 
         <!-- General information -->
-        <mat-card class="{{generalContent.cardElevation}}">
-
+        <h4 class="title-underlined">Details</h4>
+        <mat-card class="{{generalContent.cardElevation}} mb-5">
           <div class="form-group row">
             <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
               class="form-field col-12 col-md-6">
@@ -43,16 +42,16 @@
               class="form-field col-12 col-md-6">
               <mat-label>Start en eind datum</mat-label>
               <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-                <input matStartDate id="startDate" placeholder="Start datum" name="startDate" [(ngModel)]="startDate" [disabled]="formDisabled" #dateStart="ngModel">
-                <input matEndDate id="endDate" placeholder="Eind datum" name="endDate" [(ngModel)]="endDate" [disabled]="formDisabled" #dateEnd="ngModel">
+                <input matStartDate id="startDate" placeholder="Start datum" name="startDate" [(ngModel)]="startDate"
+                  [disabled]="formDisabled" #dateStart="ngModel">
+                <input matEndDate id="endDate" placeholder="Eind datum" name="endDate" [(ngModel)]="endDate"
+                  [disabled]="formDisabled" #dateEnd="ngModel">
               </mat-date-range-input>
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-date-range-picker #picker></mat-date-range-picker>
               <mat-error *ngIf="dateStart.invalid">Start datum ongeldig</mat-error>
               <mat-error *ngIf="dateEnd.invalid">Eind datum ongeldig</mat-error>
             </mat-form-field>
-
-
           </div>
 
           <div class="form-group row">
@@ -65,17 +64,17 @@
               </div>
             </div>
           </div>
-
-          <!-- Actions -->
-          <div class="row mt-3">
-            <div class="col-12">
-              <button mat-flat-button color="accent" type="submit" class="mr-2"
-                [disabled]="!addCalendarItemForm.form.valid">opslaan</button>
-              <button mat-flat-button color="primary" type="button"
-                (click)="resetForm(); addCalendarItemForm.form.markAsUntouched()">reset</button>
-            </div>
-          </div>
         </mat-card>
+
+        <!-- Actions -->
+        <div class="row mt-3">
+          <div class="col-12">
+            <button mat-flat-button color="accent" type="submit" class="mr-2"
+              [disabled]="!addCalendarItemForm.form.valid">opslaan</button>
+            <button mat-flat-button color="primary" type="button"
+              (click)="resetForm(); addCalendarItemForm.form.markAsUntouched()">reset</button>
+          </div>
+        </div>
       </form>
     </div>
   </div>
