--- a/angular-web-app/src/app/components/_admin/comp-features/comp-features.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-features/comp-features.component.html
@@ -1,30 +1,32 @@
-<mat-card *ngIf="featured && generalContent" class="{{generalContent.cardElevation}}">
-  <h4 class="title-underlined">Resultaat</h4>
-  <div *ngIf="featured.active">
-    <div class="container-fluid">
-      <app-section-title [title]="featured.title" [subTitle]="featured.subTitle" [text]="featured.text">
-      </app-section-title>
-    </div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-12">
-          <app-painting-card [painting]="featured.painting" [maxHeight]="featured.maxHeight"
-            [elevation]="generalContent.cardElevation">
-          </app-painting-card>
+<div *ngIf="featured && generalContent" class="container-fluid bg-light">
+
+  <h4 class="title-underlined mt-5">Resultaat</h4>
+  <div class="mb-5">
+    <div *ngIf="featured.active">
+      <div class="container-fluid">
+        <app-section-title [title]="featured.title" [subTitle]="featured.subTitle" [text]="featured.text">
+        </app-section-title>
+      </div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <app-painting-card [painting]="featured.painting" [maxHeight]="featured.maxHeight"
+              [elevation]="generalContent.cardElevation">
+            </app-painting-card>
+          </div>
         </div>
       </div>
     </div>
+    <!-- Not visible -->
+    <div *ngIf="!featured.active" class="w-100 text-center">
+      <ngb-alert [dismissible]="false" class="mb-0">
+        <strong>Niet</strong> zichtbaar op de website.
+      </ngb-alert>
+    </div>
   </div>
-  <!-- Not visible -->
-  <div *ngIf="!featured.active" class="w-100 text-center">
-    <ngb-alert [dismissible]="false" class="mb-0">
-      <strong>Niet</strong> zichtbaar op de website.
-    </ngb-alert>
-  </div>
-</mat-card>
 
-<mat-card *ngIf="featured && generalContent" class="{{generalContent.cardElevation}}">
   <form (ngSubmit)="onSubmit()" #featuredForm="ngForm">
+
     <div class="form-group row">
       <div class="col-sm-12 col-md-10 d-flex align-items-center">
         <h4 class="title-underlined">Instellingen</h4>
@@ -39,63 +41,67 @@
       </div>
     </div>
 
-    <div class="form-group row">
-      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-        class="form-field col-sm-12 col-md-6">
-        <mat-label>Content titel</mat-label>
-        <input matInput type="text" id="featuredContentTitle" placeholder="Titel" name="featuredContentTitle"
-          [(ngModel)]="featured.title" #featuredContentTitleInput="ngModel" required />
-        <mat-error *ngIf="featuredContentTitleInput.invalid">
-          Titel is verplicht
-        </mat-error>
-      </mat-form-field>
+    <mat-card class="{{generalContent.cardElevation}} mb-5">
 
-      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-        class="form-field col-sm-12 col-md-6">
-        <mat-label>Content subtitel</mat-label>
-        <input matInput type="text" id="featuredContentSubTitle" placeholder="Subtitel" name="featuredContentSubTitle"
-          [(ngModel)]="featured.subTitle" #featuredContentSubTitleInput="ngModel" required />
-        <mat-error *ngIf="featuredContentSubTitleInput.invalid">
-          Subtitel is verplicht
-        </mat-error>
-      </mat-form-field>
+      <div class="form-group row">
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field col-sm-12 col-md-6">
+          <mat-label>Content titel</mat-label>
+          <input matInput type="text" id="featuredContentTitle" placeholder="Titel" name="featuredContentTitle"
+            [(ngModel)]="featured.title" #featuredContentTitleInput="ngModel" required />
+          <mat-error *ngIf="featuredContentTitleInput.invalid">
+            Titel is verplicht
+          </mat-error>
+        </mat-form-field>
 
-      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-        class="form-field col-12">
-        <mat-label>Content text</mat-label>
-        <textarea rows="1" matInput type="text" id="featuredContentText" placeholder="Text" name="featuredContentText"
-          [(ngModel)]="featured.text" #featuredContentTextInput="ngModel" required>
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field col-sm-12 col-md-6">
+          <mat-label>Content subtitel</mat-label>
+          <input matInput type="text" id="featuredContentSubTitle" placeholder="Subtitel" name="featuredContentSubTitle"
+            [(ngModel)]="featured.subTitle" #featuredContentSubTitleInput="ngModel" required />
+          <mat-error *ngIf="featuredContentSubTitleInput.invalid">
+            Subtitel is verplicht
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field col-12">
+          <mat-label>Content text</mat-label>
+          <textarea rows="1" matInput type="text" id="featuredContentText" placeholder="Text" name="featuredContentText"
+            [(ngModel)]="featured.text" #featuredContentTextInput="ngModel" required>
               </textarea>
-        <mat-error *ngIf="featuredContentTextInput.invalid">
-          Text is verplicht
-        </mat-error>
-      </mat-form-field>
+          <mat-error *ngIf="featuredContentTextInput.invalid">
+            Text is verplicht
+          </mat-error>
+        </mat-form-field>
 
-      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-        class="form-field col-sm-12 col-md-6">
-        <mat-label>Schilderij</mat-label>
-        <mat-select id="featuredContentPainting" name="featuredContentPainting" [(ngModel)]="featured.painting"
-          #featuredContentPaintingInput="ngModel" required>
-          <mat-option *ngFor="let painting of paintings" [value]="painting">
-            <img [src]="painting.thumbnail" alt="thumbnail" class="img-thumbnail img-dropdown" />
-            {{ painting.title }}
-          </mat-option>
-        </mat-select>
-        <mat-error *ngIf="featuredContentPaintingInput.invalid">
-          Schilderij is verplicht
-        </mat-error>
-      </mat-form-field>
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field col-sm-12 col-md-6">
+          <mat-label>Schilderij</mat-label>
+          <mat-select id="featuredContentPainting" name="featuredContentPainting" [(ngModel)]="featured.painting"
+            #featuredContentPaintingInput="ngModel" required>
+            <mat-option *ngFor="let painting of paintings" [value]="painting">
+              <img [src]="painting.thumbnail" alt="thumbnail" class="img-thumbnail img-dropdown" />
+              {{ painting.title }}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="featuredContentPaintingInput.invalid">
+            Schilderij is verplicht
+          </mat-error>
+        </mat-form-field>
 
-      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-        class="form-field col-sm-12 col-md-6">
-        <mat-label>Hoogte</mat-label>
-        <input matInput type="text" id="featuredContentHeight" placeholder="Hoogte" name="featuredContentHeight"
-          [(ngModel)]="featured.maxHeight" #featuredContentHeightInput="ngModel" required />
-        <mat-error *ngIf="featuredContentHeightInput.invalid">
-          Hoogte is verplicht
-        </mat-error>
-      </mat-form-field>
-    </div>
+        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+          class="form-field col-sm-12 col-md-6">
+          <mat-label>Hoogte</mat-label>
+          <input matInput type="text" id="featuredContentHeight" placeholder="Hoogte" name="featuredContentHeight"
+            [(ngModel)]="featured.maxHeight" #featuredContentHeightInput="ngModel" required />
+          <mat-error *ngIf="featuredContentHeightInput.invalid">
+            Hoogte is verplicht
+          </mat-error>
+        </mat-form-field>
+      </div>
+
+    </mat-card>
 
     <button mat-flat-button color="accent" type="submit"
       [disabled]="!featuredForm.form.valid || featuredForm.form.pristine">
@@ -106,4 +112,5 @@
       Reset
     </button>
   </form>
-</mat-card>
+
+</div>
