--- a/angular-web-app/src/app/components/_admin/comp-services/comp-services.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-services/comp-services.component.html
@@ -1,6 +1,7 @@
-<mat-card *ngIf="services && generalContent" class="{{generalContent.cardElevation}}">
-  <h4 class="title-underlined">Resultaat</h4>
-  <div *ngIf="services.active">
+<div *ngIf="services && generalContent" class="container-fluid bg-light">
+
+  <h4 class="title-underlined mt-5">Resultaat</h4>
+  <div *ngIf="services.active" class="mb-5">
     <app-section-title [title]="services.title" [subTitle]="services.subTitle" [text]="services.text">
     </app-section-title>
     <div class="row">
@@ -10,14 +11,14 @@
     </div>
   </div>
   <!-- Not visible -->
-  <div *ngIf="!services.active" class="w-100 text-center">
+  <div *ngIf="!services.active" class="w-100 text-center mb-5">
     <ngb-alert [dismissible]="false" class="mb-0">
       <strong>Niet</strong> zichtbaar op de website.
     </ngb-alert>
   </div>
-</mat-card>
 
-<mat-card *ngIf="services && generalContent" class="{{generalContent.cardElevation}}">
+
+
   <form (ngSubmit)="onSubmit()" #servicesForm="ngForm">
 
     <div class="form-group row">
@@ -34,98 +35,100 @@
       </div>
     </div>
 
-    <div class="form-group row">
-      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-        class="form-field col-sm-12 col-md-6">
-        <mat-label>Content titel</mat-label>
-        <input matInput type="text" id="servicesContentTitle" placeholder="Titel" name="servicesContentTitle"
-          [(ngModel)]="services.title" #servicesContentTitleInput="ngModel" required>
-        <mat-error *ngIf="servicesContentTitleInput.invalid">
-          Titel is verplicht
-        </mat-error>
-      </mat-form-field>
-
-      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-        class="form-field col-sm-12 col-md-6">
-        <mat-label>Content subtitel</mat-label>
-        <input matInput type="text" id="servicesContentSubTitle" placeholder="Subtitel" name="servicesContentSubTitle"
-          [(ngModel)]="services.subTitle" #servicesContentSubTitleInput="ngModel" required>
-        <mat-error *ngIf="servicesContentSubTitleInput.invalid">
-          Subtitel is verplicht
-        </mat-error>
-      </mat-form-field>
-
-      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-        class="form-field col-12">
-        <mat-label>Content text</mat-label>
-        <textarea rows="1" matInput type="text" id="servicesContentText" placeholder="Text" name="servicesContentText"
-          [(ngModel)]="services.text" #servicesContentTextInput="ngModel" required> </textarea>
-        <mat-error *ngIf="servicesContentTextInput.invalid">
-          Text is verplicht
-        </mat-error>
-      </mat-form-field>
-    </div>
-
-    <div class="form-group row">
-      <div class="col-12 col-sm-6">
+    <mat-card class="{{generalContent.cardElevation}} mb-5">
+      <div class="form-group row">
         <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-          class="form-field w-100">
-          <mat-label>Card titel</mat-label>
-          <input matInput type="text" id="servicesCard0Title" placeholder="Titel" name="servicesCard0Title"
-            [(ngModel)]="services.services[0].title" #servicesCard0TitleInput="ngModel" required>
-          <mat-error *ngIf="servicesCard0TitleInput.invalid">
+          class="form-field col-sm-12 col-md-6">
+          <mat-label>Content titel</mat-label>
+          <input matInput type="text" id="servicesContentTitle" placeholder="Titel" name="servicesContentTitle"
+            [(ngModel)]="services.title" #servicesContentTitleInput="ngModel" required>
+          <mat-error *ngIf="servicesContentTitleInput.invalid">
             Titel is verplicht
           </mat-error>
         </mat-form-field>
 
         <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-          class="form-field w-100">
-          <mat-label>Card icon</mat-label>
-          <input matInput type="text" id="card0Icon" placeholder="Icon" name="card0Icon"
-            [(ngModel)]="services.services[0].icon" #card0IconInput="ngModel" required>
-          <mat-error *ngIf="card0IconInput.invalid">
-            Icon is verplicht
+          class="form-field col-sm-12 col-md-6">
+          <mat-label>Content subtitel</mat-label>
+          <input matInput type="text" id="servicesContentSubTitle" placeholder="Subtitel" name="servicesContentSubTitle"
+            [(ngModel)]="services.subTitle" #servicesContentSubTitleInput="ngModel" required>
+          <mat-error *ngIf="servicesContentSubTitleInput.invalid">
+            Subtitel is verplicht
           </mat-error>
         </mat-form-field>
 
         <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-          class="form-field w-100">
-          <mat-label>Card tekst</mat-label>
-          <input matInput type="text" id="servicesCard0Text" placeholder="Text" name="servicesCard0Text"
-            [(ngModel)]="services.services[0].description">
+          class="form-field col-12">
+          <mat-label>Content text</mat-label>
+          <textarea rows="1" matInput type="text" id="servicesContentText" placeholder="Text" name="servicesContentText"
+            [(ngModel)]="services.text" #servicesContentTextInput="ngModel" required> </textarea>
+          <mat-error *ngIf="servicesContentTextInput.invalid">
+            Text is verplicht
+          </mat-error>
         </mat-form-field>
       </div>
 
-      <div class="col-12 col-sm-6">
-        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-          class="form-field w-100">
-          <mat-label>Card titel</mat-label>
-          <input matInput type="text" id="servicesCard1Title" placeholder="Titel" name="servicesCard1Title"
-            [(ngModel)]="services.services[1].title" #servicesCard1TitleInput="ngModel" required>
-          <mat-error *ngIf="servicesCard1TitleInput.invalid">
-            Titel is verplicht
-          </mat-error>
-        </mat-form-field>
+      <div class="form-group row">
+        <div class="col-12 col-sm-6">
+          <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+            class="form-field w-100">
+            <mat-label>Card titel</mat-label>
+            <input matInput type="text" id="servicesCard0Title" placeholder="Titel" name="servicesCard0Title"
+              [(ngModel)]="services.services[0].title" #servicesCard0TitleInput="ngModel" required>
+            <mat-error *ngIf="servicesCard0TitleInput.invalid">
+              Titel is verplicht
+            </mat-error>
+          </mat-form-field>
 
-        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-          class="form-field w-100">
-          <mat-label>Card icon</mat-label>
-          <input matInput type="text" id="card1Icon" placeholder="Icon" name="card1Icon"
-            [(ngModel)]="services.services[1].icon" #card1IconInput="ngModel" required>
-          <mat-error *ngIf="card1IconInput.invalid">
-            Icon is verplicht
-          </mat-error>
-        </mat-form-field>
+          <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+            class="form-field w-100">
+            <mat-label>Card icon</mat-label>
+            <input matInput type="text" id="card0Icon" placeholder="Icon" name="card0Icon"
+              [(ngModel)]="services.services[0].icon" #card0IconInput="ngModel" required>
+            <mat-error *ngIf="card0IconInput.invalid">
+              Icon is verplicht
+            </mat-error>
+          </mat-form-field>
 
-        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-          class="form-field w-100">
-          <mat-label>Card tekst</mat-label>
-          <input matInput type="text" id="servicesCard1Text" placeholder="Text" name="servicesCard1Text"
-            [(ngModel)]="services.services[1].description">
-        </mat-form-field>
+          <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+            class="form-field w-100">
+            <mat-label>Card tekst</mat-label>
+            <input matInput type="text" id="servicesCard0Text" placeholder="Text" name="servicesCard0Text"
+              [(ngModel)]="services.services[0].description">
+          </mat-form-field>
+        </div>
+
+        <div class="col-12 col-sm-6">
+          <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+            class="form-field w-100">
+            <mat-label>Card titel</mat-label>
+            <input matInput type="text" id="servicesCard1Title" placeholder="Titel" name="servicesCard1Title"
+              [(ngModel)]="services.services[1].title" #servicesCard1TitleInput="ngModel" required>
+            <mat-error *ngIf="servicesCard1TitleInput.invalid">
+              Titel is verplicht
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+            class="form-field w-100">
+            <mat-label>Card icon</mat-label>
+            <input matInput type="text" id="card1Icon" placeholder="Icon" name="card1Icon"
+              [(ngModel)]="services.services[1].icon" #card1IconInput="ngModel" required>
+            <mat-error *ngIf="card1IconInput.invalid">
+              Icon is verplicht
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+            class="form-field w-100">
+            <mat-label>Card tekst</mat-label>
+            <input matInput type="text" id="servicesCard1Text" placeholder="Text" name="servicesCard1Text"
+              [(ngModel)]="services.services[1].description">
+          </mat-form-field>
+        </div>
+
       </div>
-
-    </div>
+    </mat-card>
 
     <button mat-flat-button color="accent" type="submit"
       [disabled]="!servicesForm.form.valid || servicesForm.form.pristine">
@@ -136,4 +139,5 @@
       Reset
     </button>
   </form>
-</mat-card>
+
+</div>
