--- a/angular-web-app/src/app/components/_admin/news-edit/news-edit.component.html
+++ b/angular-web-app/src/app/components/_admin/news-edit/news-edit.component.html
@@ -4,11 +4,10 @@
 <div class="container-fluid" *ngIf="generalContent">
   <div class="row mb-5">
     <div class="col-12">
-
       <form *ngIf="newsItem" (ngSubmit)="onSubmit()" #editNewsItemForm="ngForm">
-        <mat-card class="{{generalContent.cardElevation}}">
-          <h4 class="title-underlined">Afbeelding</h4>
 
+        <h4 class="title-underlined">Afbeelding</h4>
+        <mat-card class="{{generalContent.cardElevation}} mb-5">
           <div class="form-group row">
             <div class="col-12 d-flex">
               <img *ngIf="newsItem.image" [src]="newsItem.image" class="img-thumbnail mr-2" style="max-height: 180px;">
@@ -27,8 +26,8 @@
         </mat-card>
 
         <!-- General information -->
-        <mat-card class="{{generalContent.cardElevation}}">
-          <h4 class="title-underlined">Details</h4>
+        <h4 class="title-underlined">Details</h4>
+        <mat-card class="{{generalContent.cardElevation}} mb-5">
 
           <div class="form-group row">
             <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
@@ -96,17 +95,17 @@
               </div>
             </div>
           </div>
-
-          <!-- Actions -->
-          <div class="row mt-3">
-            <div class="col-12">
-              <button mat-flat-button color="accent" type="submit" class="mr-2"
-                [disabled]="!editNewsItemForm.valid && !selectedFiles.length">opslaan</button>
-              <button mat-flat-button color="primary" type="button"
-                (click)="resetForm(); editNewsItemForm.form.markAsUntouched()">reset</button>
-            </div>
-          </div>
         </mat-card>
+
+        <!-- Actions -->
+        <div class="row mt-3">
+          <div class="col-12">
+            <button mat-flat-button color="accent" type="submit" class="mr-2"
+              [disabled]="!editNewsItemForm.valid && !selectedFiles.length">opslaan</button>
+            <button mat-flat-button color="primary" type="button"
+              (click)="resetForm(); editNewsItemForm.form.markAsUntouched()">reset</button>
+          </div>
+        </div>
       </form>
     </div>
   </div>
